@@ -46,6 +46,7 @@ C_Polyhedron_test1.java \
 NNC_Polyhedron_test1.java \
 MIP_Problem_test1.java \
 Parma_Polyhedra_Library_test1.java \
+Parma_Polyhedra_Library_test2.java \
 PPL_Test.java \
 ppl_interface_generator_java_test_java_code.m4 \
 ppl_interface_generator_java_test_java.m4 \
@@ -59,13 +60,20 @@ C_Polyhedron_test1.java \
 NNC_Polyhedron_test1.java \
 MIP_Problem_test1.java \
 Parma_Polyhedra_Library_test1.java \
+Parma_Polyhedra_Library_test2.java \
 PPL_Test.java
 
 CLASSPATH = ../ppl_java.jar:.
 JAVACFLAGS = -classpath $(CLASSPATH)
 
+PPL_DLOPEN = -dlopen ../../../src/libppl.la
+
+if BUILD_WATCHDOG_LIBRARY
+PWL_DLOPEN = -dlopen ../../../Watchdog/src/libpwl.la
+endif BUILD_WATCHDOG_LIBRARY
+
 java_test_environment = \
-$(LIBTOOL) --mode=execute -dlopen ../../../src/libppl.la \
+$(LIBTOOL) --mode=execute $(PPL_DLOPEN) $(PWL_DLOPEN) \
 	$(JAVA) -classpath .:../ppl_java.jar \
 		-Djava.library.path=../jni/.libs
 
@@ -75,6 +83,7 @@ check-local: ppl_java_generated_tests.java
 	$(java_test_environment) NNC_Polyhedron_test1
 	$(java_test_environment) MIP_Problem_test1
 	$(java_test_environment) Parma_Polyhedra_Library_test1
+	$(java_test_environment) Parma_Polyhedra_Library_test2
 
 ppl_java_generated_tests.java: $(interface_generator_dependencies)
 	$(M4) --prefix-builtin -I../.. \
